--- a/package.json
+++ b/package.json
@@ -11,17 +11,21 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.14.2",
     "react-icon": "^1.0.0",
     "react-icons": "^4.1.0",
     "react-redux": "^7.2.2",
     "react-redux-firebase": "^3.9.0",
     "react-router": "^5.2.0",
+    "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-spinners": "^0.10.4",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-firestore": "^0.14.0",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
