--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
@@ -22,6 +23,7 @@
     "react-scripts": "4.0.1",
     "react-spinners": "^0.10.4",
     "redux": "^4.0.5",
+    "redux-auth-wrapper": "^3.0.0",
     "redux-devtools-extension": "^2.13.8",
     "redux-firestore": "^0.14.0",
     "redux-thunk": "^2.3.0",
